# SDIZO

./: CMakeLists.txt  Menu.cpp  Menu.h  README.md  SDiZO.cpp  data.txt
Array/: Array.cpp  Array.h  ArrayMenu.cpp  ArrayMenu.h
Heap/: Heap.cpp  Heap.h  HeapMenu.cpp  HeapMenu.h
List/: List.cpp  List.h  ListElement.h  ListMenu.cpp  ListMenu.h
RedBlackTree/: Node.cpp  Node.h  RedBlackTree.cpp  RedBlackTree.h  RedBlackTreeMenu.cpp  RedBlackTreeMenu.h
Results/: ArrayResults.txt  HeapResults.txt  ListResults.txt  RedBlackTreeResults.txt
Tools/: FileClass.cpp  FileClass.h  Generator.cpp  Timer.cpp
